2017-04-25  David Malcolm  <dmalcolm@redhat.com>

	* parser.c (cp_parser_member_declaration): Add fix-it hint
	for removing stray semicolons.

2017-04-25  David Malcolm  <dmalcolm@redhat.com>

	* name-lookup.c (get_std_name_hint): New function.
	(maybe_suggest_missing_header): New function.
	(suggest_alternative_in_explicit_scope): Call
	maybe_suggest_missing_header.

2017-04-25  David Malcolm  <dmalcolm@redhat.com>

	PR c++/80177
	* name-lookup.c (suggest_alternative_in_explicit_scope): Convert
	candidate type of bm from tree to const char *.
	(consider_binding_level): Likewise.
	(lookup_name_fuzzy): Likewise, using this to merge the best
	result from the preprocessor into bm, rather than immediately
	returning, so that better matches from reserved words can "win".
	Guard the rejection of keywords that don't start decl-specifiers
	so it only happens for FUZZY_LOOKUP_TYPENAME.

2017-04-24  Volker Reichelt  <v.reichelt@netcologne.de>

	* decl.c (grokdeclarator): Use %qT instead of %<%T%> in diagnostics.
	(start_enum): Likewise.
	(build_enumerator): Likewise. Use %qE instead of plain %E.
	* parser.c (cp_parser_mem_initializer_list): Use %qD instead of
	%<%D%> in diagnostics.
	(cp_parser_elaborated_type_specifier): Likewise.
	* pt.c (make_pack_expansion): Use %qT and %qE instead of
	%<%T%> and %<%E%> in diagnostics.
	(tsubst_pack_expansion): Likewise.

2017-04-24  David Malcolm  <dmalcolm@redhat.com>

	PR c++/80016
	* parser.c (cp_parser_unary_expression):  Generate a location
	range for alignof and sizeof expressions.

2017-04-24  Volker Reichelt  <v.reichelt@netcologne.de>

	* parser.c (cp_parser_cv_qualifier_seq_opt): Add fix-it info to
	error message.
	(cp_parser_virt_specifier_seq_opt): Likewise.
	(set_and_check_decl_spec_loc): Likewise twice.

2017-04-21  Jason Merrill  <jason@redhat.com>

	PR c++/80179 - ICE with initialized flexible array member.
	* constexpr.c (verify_ctor_sanity): Handle flexible array members.
