@@ -1,3 +1,7 @@
+2017-04-25  Volker Reichelt  <v.reichelt@netcologne.de>
+
+	* g++.dg/cpp0x/enum34.C: New test.
+
 2017-04-25  Tom de Vries  <tom@codesourcery.com>
 
 	* lib/gcc-dg.exp (cleanup-after-saved-dg-test): Cleanup line number
