@@ -1,3 +1,8 @@
+2017-04-25  Volker Reichelt  <v.reichelt@netcologne.de>
+
+	* parser.c (cp_parser_elaborated_type_specifier): Add fix-it to
+	diagnostic of invalid class/struct keyword after enum.
+
 2017-04-25  David Malcolm  <dmalcolm@redhat.com>
 
 	* parser.c (cp_parser_member_declaration): Add fix-it hint
